# justbc

./: .gitattributes  .gitignore  Cargo.toml  README.md
lib/bandcamp-api/: Cargo.toml
lib/bandcamp-api/benches/: bench.rs  search.html
lib/bandcamp-api/src/: lib.rs  pages.rs  url.rs
lib/bandcamp-api/src/data/: albums.rs  fans.rs  mod.rs  outlets.rs  releases.rs  search.rs
lib/bandcamp-api/src/data/albums/: mod.rs  parse.rs
lib/bandcamp-api/src/data/common/: mod.rs  parse.rs
lib/bandcamp-api/src/data/common/date/: mod.rs  parse.rs
lib/bandcamp-api/src/data/outlets/: mod.rs  parse.rs
lib/bandcamp-api/src/data/releases/: mod.rs  parse.rs
lib/bandcamp-api/src/data/search/: mod.rs  parse.rs
lib/bc-track/: Cargo.toml
lib/bc-track/src/: lib.rs
lib/bc-tui/: Cargo.toml
lib/bc-tui/src/: fans.rs  lib.rs  nav.rs  outlets.rs  releases.rs  search.rs  symbols.rs
lib/bc-tui/src/search/: details.rs  list.rs  mod.rs
lib/bc-tui/src/tracks/: bar.rs  mod.rs  time.rs
lib/builder/: Cargo.toml
lib/builder/src/: lib.rs
lib/device/: Cargo.toml
lib/device/src/: lib.rs  none.rs  windows.rs
lib/event/: Cargo.toml
lib/event/src/: lib.rs
lib/fetch/: Cargo.toml
lib/fetch/src/: lib.rs  pool.rs
lib/gen-tui/: Cargo.toml
lib/gen-tui/src/: buffer.rs  layout.rs  lib.rs  state.rs  style.rs
lib/gen-tui/src/widgets/: clear.rs  container.rs  fit.rs  input.rs  mod.rs  scroll.rs  spinner.rs
lib/gen-tui/src/widgets/progress/: bar.rs  labeled.rs  mod.rs
lib/input/: Cargo.toml
lib/input/src/: binds.rs  keys.rs  lib.rs
lib/media-keys/: Cargo.toml
lib/media-keys/lib/media-keys-hook/: Cargo.toml  build.rs
lib/media-keys/lib/media-keys-hook/src/: lib.rs
lib/media-keys/src/: lib.rs  none.rs
lib/media-keys/src/windows/: hook.rs  mod.rs  rc.rs
lib/mp3/: Cargo.toml
lib/mp3/src/: cache.rs  lib.rs  samples.rs  span.rs
lib/mp3/src/decode/: buf.rs  mod.rs  tracked.rs
lib/play/: Cargo.toml
lib/play/src/: handle.rs  lib.rs  recover.rs  tick.rs  track.rs
lib/scrape/: Cargo.toml
lib/scrape/src/: extract.rs  filter.rs  lib.rs  scraper.rs
lib/scrape/src/filter/: mod.rs  pat.rs
lib/seek/: Cargo.toml
lib/seek/src/: lib.rs
lib/stream/: Cargo.toml
lib/stream/benches/: bench.rs
lib/stream/src/: buf.rs  lib.rs  thread.rs
lib/terminate/: Cargo.toml
lib/terminate/src/: lib.rs
