[package]
name = "bandcamp-api"
version = "0.1.0"
authors = ["reslario <reslario.code@gmail.com>"]
edition = "2018"

[dependencies]
url = "2.2.0"
reqwest = { version = "0.10.10", features = ["blocking", "json"], optional = true }
serde = { version = "1.0.118", features = ["derive"], optional = true }
serde_json = { version = "1.0.60", optional = true }
snafu = { version = "0.6.10", optional = true }
bytes = { version =  "0.5.6", optional = true }
practicaltimestamp = { version = "0.1.0", optional = true }

[features]
default = ["query"]
query = ["reqwest", "serde", "serde_json", "snafu", "bytes", "practicaltimestamp"]
