[package]
name = "bc-tui"
version = "0.1.0"
authors = ["reslario <reslario.code@gmail.com>"]
edition = "2018"

[dependencies]
bandcamp-api = { path = "../bandcamp-api", default-features = false }
gen-tui = { path = "../gen-tui" }
tui = { version = "0.13.0", default-features = false }
builder = { path = "../builder" }
