[package]
name = "event"
version = "0.1.0"
authors = ["reslario <reslario.code@gmail.com>"]
edition = "2018"

[dependencies]
input = { path = "../input" }
builder = { path = "../builder" }
fetch = { path = "../fetch" }
device = { path = "../device" }
terminate = { path = "../terminate" }
media-keys = { path = "../media-keys" }
snafu = "0.6.10"
