[package]
name = "fetch"
version = "0.1.0"
authors = ["Simon Kunze <simon.kunze@swissmains.com>"]
edition = "2018"

[dependencies]
rayon = "1.5.0"
bandcamp-api = { path = "../bandcamp-api" }
snafu = "0.6.10"
reqwest = { version = "0.10.9", features = ["blocking"] }
bc-track = { path = "../bc-track" }
