[package]
name = "gen-tui"
version = "0.1.0"
authors = ["reslario <reslario.code@gmail.com>"]
edition = "2018"

[dependencies]
tui = { version = "0.14.0", default-features = false }
builder = { path = "../builder" }
input = { path = "../input", optional = true }

[features]
handle-input = ["input"]
