[package]
name = "media-keys"
version = "0.1.0"
authors = ["reslario <reslario.code@gmail.com>"]
edition = "2018"

[dependencies]
once_cell = "1.5.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef"] }
windows-dll = "0.2.4"
kernel32-sys = "0.2.2"
